Cambios para adaptar responsive

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -103,6 +103,23 @@
                             </div>
                         </div>
                     </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed accordionText" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseFour">
+                                Que es rate your music?
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                <p>Rate your music es un sitio web donde diversos usuarios del todo el mundo puntuan
+                                    y dan sus puntos de vista sobre artistas y su musica. Si estas buscando cosas nuevas
+                                    te recomendamos pasar y darte una vuelta por ahi!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
         </main>
 
