--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -39,7 +39,8 @@
             <nav>
                 <ul class="menu nav nav-pills">
                     <li class="nav-item"><a class="nav-link navColor" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link navColor active" href="discografia.html">Discografia</a></li>
+                    <li class="nav-item"><a class="nav-link navColor active" href="discografia.html">Discografia</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link navColor" href="musica.html">Musica</a></li>
                     <li class="nav-item"><a class="nav-link navColor" href="faq.html">Faq</a></li>
                     <li class="nav-item"><a class="nav-link navColor" href="contacto.html">Contacto</a></li>
@@ -49,79 +50,77 @@
 
         <main class="content">
             <h1 class="visually-hidden">Discografia</h1>
-            <section class="discoSection1">
-                <div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
                     <a target="_blank" title="The black saint and the sinner lady"
-                        href="https://rateyourmusic.com/release/album/mingus/the-black-saint-and-the-sinner-lady/"><img
-                            src="../img/Theblacksaintandthesinnerlady.jpg" alt="The black saint and the sinner lady"
-                            class="imgdiscografia"></a>
+                        href="https://rateyourmusic.com/release/album/mingus/the-black-saint-and-the-sinner-lady/">
+                        <img src="../img/Theblacksaintandthesinnerlady.jpg" alt="The black saint and the sinner lady"
+                            class="img-fluid imgdiscografia">
+                    </a>
                     <p>Calificación en Rate your music: 4.34 / 5.0</p>
                 </div>
-
-                <div>
+                <div class="col-12 col-md-6 col-lg-4">
                     <a target="_blank" title="Mingus ah um"
-                        href="https://rateyourmusic.com/release/album/charles-mingus/mingus-ah-um-11/"><img
-                            src="../img/Mingusahum.jpg" alt="Mingus ah um" class="imgdiscografia"></a>
+                        href="https://rateyourmusic.com/release/album/charles-mingus/mingus-ah-um-11/">
+                        <img src="../img/Mingusahum.jpg" alt="Mingus ah um" class="img-fluid imgdiscografia">
+                    </a>
                     <p>Calificación en Rate your music: 4.09 / 5.0</p>
                 </div>
-
-                <div>
-                    <a target="_blank" title="Blues and roots"
-                        href="https://rateyourmusic.com/release/album/charlie-mingus/blues-and-roots/"><img
-                            src="../img/Bluesandroots.jpg" alt="Blues and roots" class="imgdiscografia"></a>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <a class="paddingdisco" target="_blank" title="Blues and roots"
+                        href="https://rateyourmusic.com/release/album/charlie-mingus/blues-and-roots/">
+                        <img src="../img/Bluesandroots.jpg" alt="Blues and roots" class="img-fluid imgdiscografia">
+                    </a>
                     <p>Calificación en Rate your music: 4.03 / 5.0</p>
                 </div>
-            </section>
-
-            <section class="discoSection2">
-                <div>
+                <div class="col-12 col-md-6 col-lg-4">
                     <a target="_blank" title="Let my children hear music"
-                        href="https://rateyourmusic.com/release/album/charles-mingus/let-my-children-hear-music/"><img
-                            src="../img/LetMyChildrenHearMusic.jpg" alt="Let my children hear music"
-                            class="imgdiscografia"></a>
+                        href="https://rateyourmusic.com/release/album/charles-mingus/let-my-children-hear-music/">
+                        <img src="../img/LetMyChildrenHearMusic.jpg" alt="Let my children hear music" class="img-fluid imgdiscografia">
+                    </a>
                     <p>Calificación en Rate your music: 4.03 / 5.0</p>
                 </div>
-
-                <div>
+                <div class="col-12 col-md-6 col-lg-4">
                     <a target="_blank" title="Mingus Mingus Mingus Mingus Mingus"
-                        href="https://rateyourmusic.com/release/album/charles-mingus/mingus-mingus-mingus-mingus-mingus/"><img
-                            src="../img/Mingus_Mingus_Mingus_Mingus_Mingus_Mingus.jpg"
-                            alt="Mingus Mingus Mingus Mingus Mingus" class="imgdiscografia"></a>
+                        href="https://rateyourmusic.com/release/album/charles-mingus/mingus-mingus-mingus-mingus-mingus/">
+                        <img src="../img/Mingus_Mingus_Mingus_Mingus_Mingus_Mingus.jpg"
+                            alt="Mingus Mingus Mingus Mingus Mingus" class="img-fluid imgdiscografia">
+                    </a>
                     <p>Calificación en Rate your music: 4.96 / 5.0</p>
                 </div>
-
-                <div>
+                <div class="col-12 col-md-6 col-lg-4">
                     <a target="_blank" title="Money Jungle"
-                        href="https://rateyourmusic.com/release/album/duke-ellington-charlie-mingus-and-max-roach/money-jungle/"><img
-                            src="../img/Moneyjungle.jpg" alt="Money Jungle" class="imgdiscografia"></a>
+                        href="https://rateyourmusic.com/release/album/duke-ellington-charlie-mingus-and-max-roach/money-jungle/">
+                        <img src="../img/Moneyjungle.jpg" alt="Money Jungle" class="img-fluid imgdiscografia">
+                    </a>
                     <p>Calificación en Rate your music: 3.88 / 5.0</p>
                 </div>
-            </section>
+            </div>
         </main>
 
-        <footer>
-            <div class="cssfooter">
-                <div>
-                    <p><a href="./faq.html">FAQ</a></p>
+            <footer>
+                <div class="cssfooter">
+                    <div>
+                        <p><a href="./faq.html">FAQ</a></p>
+                    </div>
+                    <div>
+                        <p>Sin fines de lucro</p>
+                    </div>
+                    <div>
+                        <ul class="footermenu">
+                            <li><svg width="30" height="30">
+                                    <use xlink:href="#twitter" />
+                                </svg></li>
+                            <li><svg width="30" height="30">
+                                    <use xlink:href="#instagram" />
+                                </svg></li>
+                            <li><svg width="30" height="30">
+                                    <use xlink:href="#facebook" />
+                                </svg></li>
+                        </ul>
+                    </div>
                 </div>
-                <div>
-                    <p>Sin fines de lucro</p>
-                </div>
-                <div>
-                    <ul class="footermenu">
-                        <li><svg width="30" height="30">
-                                <use xlink:href="#twitter" />
-                            </svg></li>
-                        <li><svg width="30" height="30">
-                                <use xlink:href="#instagram" />
-                            </svg></li>
-                        <li><svg width="30" height="30">
-                                <use xlink:href="#facebook" />
-                            </svg></li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
+            </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
